--- a/web/src/pages/index.module.css
+++ b/web/src/pages/index.module.css
@@ -1,4 +1,9 @@
 .title {
   justify-items: center;
   padding: 2rem;
+  text-align: center;
+}
+
+.task-wrapper {
+  display: grid;
 }
